Created resume and bio pages as well as a README

--- a/resume.html
+++ b/resume.html
@@ -1,11 +1,10 @@
-<!-- AHMET ARMANC KESER INDEX PAGE -->
-
 <<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Armanc Keser Personal Website</title>
+    <title>Resume Page</title>
   </head>
   <body>
+
   </body>
 </html>
