--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- AHMET ARMANC KESER INDEX PAGE -->
 
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
