Started adding content to ever html file.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Armanc Keser Personal Website</title>
+    <title>Home</title>
   </head>
   <body>
+    <h1>Armanc KESER</h1>
+    <h2>Tufts University</h2>
+    <img src="images/photo.jpg" alt="My Picture">
   </body>
 </html>
