--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,11 @@
     <title>Resume Page</title>
   </head>
   <body>
-
+  <h1>Resume</h1>
+  <h2>Ahmet Armanc Keser</h2>
+  <h2>Education</h2>
+  <h2>Experience</h2>
+  <h2>Skills</h2>
+  <h2>Activities</h2>
   </body>
 </html>
