--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Home</title>
   </head>
   <body>
+    <p>TEXT</p>
     <h1>Armanc KESER</h1>
     <h2>Tufts University</h2>
     <img src="images/photo.jpg" alt="My Picture">
