--- a/index.html
+++ b/index.html
@@ -2,14 +2,24 @@
 
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Home</title>
-  </head>
-  <body>
-    <p>TEXT</p>
-    <h1>Armanc KESER</h1>
-    <h2>Tufts University</h2>
-    <img src="images/photo.jpg" alt="My Picture">
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Home</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
+  <div class="container">
+    <div class="my_picture">
+      <img src="images/photo.jpeg" alt="My Picture" class="center">
+    </div>
+
+    <div class="links">
+      <a href="bio.html">Biography</a>
+      <a href="resume.html">Resume</a>
+    </div>
+  </div>
+</body>
+
 </html>
