Finished index.html

--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="my_picture">
-      <img src="images/photo.jpeg" alt="My Picture" class="center">
-    </div>
+  <div class="center-screen">
+    <div class="container">
+      <div class="my_picture">
+        <img src="images/photo.jpeg" alt="My Picture" class="center">
+      </div>
+      <div class="links">
+        Armanc Keser
 
-    <div class="links">
-      <a href="bio.html">Biography</a>
-      <a href="resume.html">Resume</a>
+        <a href="bio.html">biography</a>
+        <a href="resume.html">resume</a>
+      </div>
     </div>
   </div>
 </body>
