--- a/resume.html
+++ b/resume.html
@@ -3,16 +3,82 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale = 1.0" />
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Resume Page</title>
 </head>
 
 <body>
-  <h1>Resume</h1>
-  <h2>Ahmet Armanc Keser</h2>
-  <h2>Education</h2>
-  <h2>Experience</h2>
-  <h2>Skills</h2>
-  <h2>Activities</h2>
+  <div class="textwrap">
+    <div class="section" id="top">
+      <div class="left">
+        <img src="images/photo.jpeg" class="my_picture_resume" alt="My picture">
+      </div>
+      <div class="right">
+        <p>Ahmet Armanc KESER</p>
+        <a href="https://www.linkedin.com/in/ahmet-armanc-keser-38352bb5" class="fa fa-linkedin"></a>
+        <a href="https://github.com/armanckeser" class="fa fa-github"></a>
+        <a href="mailto:armanckeser@hotmail.com?subject=ReachOut">e-mail</a>
+        <p>(+1) 781-539-3001</p>
+        <p>(+90) 553-979-0610</p>
+      </div>
+    </div>
+    <div class="section" id="educ">
+      <div class="left">
+        <p class="sectionTitle">Education</p>
+      </div>
+      <div class="right">
+        <p class="date">May 2021</p>
+        <p class="former">Tufts University, Medford</p>
+        <p class="latter">BS in Computer Science and Cognitive and Brain Sciences</p>
+        <p class="sectionText">Currently a student </p>
+      </div>
+    </div>
+    <div class="section" id="skill">
+      <div class="left">
+        <p class="sectionTitle">Skills</p>
+      </div>
+      <div class="right">
+        <p class="former">Tufts Uni</p>
+        <p class="latter">BS IN COMPUTER SCIENCE AND COGNITIVE AND BRAIN SCIENCES</p>
+        <p class="sectionText">Currently a student </p>
+      </div>
+    </div>
+    <div class="section" id="exp">
+      <div class="left">
+        <p class="sectionTitle">Experience</p>
+      </div>
+      <div class="right">
+        <p class="date">May 2021</p>
+        <p class="former">Tufts Uni</p>
+        <p class="latter">BS IN COMPUTER SCIENCE AND COGNITIVE AND BRAIN SCIENCES</p>
+        <p class="sectionText">Currently a student </p>
+      </div>
+    </div>
+    <div class="section" id="act">
+      <div class="left">
+        <p class="sectionTitle">Education</p>
+      </div>
+      <div class="right">
+        <p class="date">May 2021</p>
+        <p class="former">Tufts Uni</p>
+        <p class="latter">BS IN COMPUTER SCIENCE AND COGNITIVE AND BRAIN SCIENCES</p>
+        <p class="sectionText">Currently a student </p>
+      </div>
+    </div>
+    <div class="section" id="proj">
+      <div class="left">
+        <p class="sectionTitle">Education</p>
+      </div>
+      <div class="right">
+        <p class="date">May 2021</p>
+        <p class="former">Tufts Uni</p>
+        <p class="latter">BS IN COMPUTER SCIENCE AND COGNITIVE AND BRAIN SCIENCES</p>
+        <p class="sectionText">Currently a student </p>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
