Added skills and education

--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
       <div class="left">
         <img src="images/photo.jpeg" class="my_picture_resume" alt="My picture">
       </div>
-      <div class="right">
+      <div class="right starting">
         <p>Ahmet Armanc KESER</p>
         <a href="https://www.linkedin.com/in/ahmet-armanc-keser-38352bb5" class="fa fa-linkedin"></a>
         <a href="https://github.com/armanckeser" class="fa fa-github"></a>
@@ -29,10 +29,24 @@
         <p class="sectionTitle">Education</p>
       </div>
       <div class="right">
-        <p class="date">May 2021</p>
-        <p class="former">Tufts University, Medford</p>
-        <p class="latter">BS in Computer Science and Cognitive and Brain Sciences</p>
-        <p class="sectionText">Currently a student </p>
+        <div class="firstitem">
+          <p class="date">May 2021</p>
+          <p class="former">Tufts University, Medford</p>
+          <p class="latter">BS in Computer Science and Cognitive and Brain Sciences</p>
+          <ul class="sectionText">
+            <li>GPA: 3.81 - Dean's List</li>
+            <li>Data Structures - Machine Structure and Assembly Language - Programming Languages - Computation Theory - Game Design - Computer System Security</li>
+          </ul>
+        </div>
+        <div class="item">
+          <p class="date">June 2017</p>
+          <p class="former">Robert College, Istanbul</p>
+          <p class="latter">High School</p>
+          <ul class="sectionText">
+            <li>Awards:<br>The Michael Hamilton Award for Excellence in Science <br> The Humanitarian Award (+150hr Volunteering)</li>
+            <li>AP Programming (Java)</li>
+          </ul>
+        </div>
       </div>
     </div>
     <div class="section" id="skill">
@@ -40,9 +54,15 @@
         <p class="sectionTitle">Skills</p>
       </div>
       <div class="right">
-        <p class="former">Tufts Uni</p>
-        <p class="latter">BS IN COMPUTER SCIENCE AND COGNITIVE AND BRAIN SCIENCES</p>
-        <p class="sectionText">Currently a student </p>
+        <p class="sectionText">
+          Programming Languages: <br>C++, C, x86 Assembly, HTML, CSS, Python(Basic)
+        </p>
+        <p class="sectionText">
+          Software: <br>Atom, PyxelEdit, Photoshop, Illustrator, After Effects, Premiere Pro, Unity
+        </p>
+        <p class="sectionText">
+          Languages: <br>Turkish, English
+        </p>
       </div>
     </div>
     <div class="section" id="exp">
