Finished adding content to resume.html

--- a/resume.html
+++ b/resume.html
@@ -70,32 +70,73 @@
         <p class="sectionTitle">Experience</p>
       </div>
       <div class="right">
-        <p class="date">May 2021</p>
-        <p class="former">Tufts Uni</p>
-        <p class="latter">BS IN COMPUTER SCIENCE AND COGNITIVE AND BRAIN SCIENCES</p>
-        <p class="sectionText">Currently a student </p>
+        <p class="date">Jan 2019 - Present</p>
+        <p class="former">Teacher Assistant (Data Structures)</p>
+        <p class="latter">Tufts University</p>
+        <p class="sectionText">Leading a lab, as well as holding office hours for students learning data structures using C++ </p>
+        <div class="item">
+          <p class="date">Sep 2018 - Present</p>
+          <p class="former">Cohen Technician</p>
+          <p class="sectionText">Operating Lights or Sound for big university events in the Cohen Auditorium of capacity 600 people. </p>
+        </div>
+        <div class="item">
+          <p class="date">Sep 2012 - Jun 2017</p>
+          <p class="former">Student Tech Crew</p>
+          <p class="latter">Robert College (Istanbul)</p>
+          <p class="sectionText">Was one of the dedicated technological helpers of the school.
+            <br>Every student and faculty member (1000 people) would consult the nearest tech crew member when they had a technical problem.
+            <br>Participated in many workshops such as HTML, Arduino, After Effects and Photoshop </p>
+        </div>
+        <div class="item">
+          <p class="date">Aug 2016 - Sep 2016</p>
+          <p class="former">IT Technician</p>
+          <p class="sectionText">Interned as an IT Technician.<br>Managed the new laptop system (1000 laptops).</p>
+        </div>
       </div>
     </div>
     <div class="section" id="act">
       <div class="left">
-        <p class="sectionTitle">Education</p>
+        <p class="sectionTitle">Activities/Awards</p>
       </div>
       <div class="right">
-        <p class="date">May 2021</p>
-        <p class="former">Tufts Uni</p>
-        <p class="latter">BS IN COMPUTER SCIENCE AND COGNITIVE AND BRAIN SCIENCES</p>
-        <p class="sectionText">Currently a student </p>
+        <p class="former">The Humanitarian Award</p>
+        <ul>
+          <li>Did +150hr of volunteering</li>
+          <li>Taught kids in Eastern Turkey various subjects such as Math, English, Music and Arts</li>
+          <li>Taught visually impaired children math and made a math book (auditory). </li>
+        </ul>
+        <div class="item">
+          <p class="former">Michael Hamilton Award</p>
+          <ul>
+            <li>Recieved the Michael Hamilton Award for Excellence in Science</li>
+          </ul>
+        </div>
       </div>
     </div>
     <div class="section" id="proj">
       <div class="left">
-        <p class="sectionTitle">Education</p>
+        <p class="sectionTitle">Projects</p>
       </div>
       <div class="right">
-        <p class="date">May 2021</p>
-        <p class="former">Tufts Uni</p>
-        <p class="latter">BS IN COMPUTER SCIENCE AND COGNITIVE AND BRAIN SCIENCES</p>
-        <p class="sectionText">Currently a student </p>
+        <p class="date">Unity</p>
+        <p class="former">5 More Minutes</p>
+        <p class="sectionText">Designed and created a game in Unity
+        <br>Made the graphics design and the game design. </p>
+        <div class="item">
+          <p class="date">C++</p>
+          <p class="former">GERP</p>
+          <p class="sectionText">Made a GREP like tool using data Structure knowledge</p>
+        </div>
+        <div class="item">
+          <p class="date">C</p>
+          <p class="former">Universal Machine Emulator</p>
+          <p class="sectionText">Wrote an emulator from ground up using Machine Structure knowledge</p>
+        </div>
+        <div class="item">
+          <p class="date">Java</p>
+          <p class="former">PacMan</p>
+          <p class="sectionText">Wrote PacMan from scracth using AP Programming knowledge</p>
+        </div>
       </div>
     </div>
   </div>
