Added bio.html content

--- a/resume.html
+++ b/resume.html
@@ -125,7 +125,7 @@
         <div class="item">
           <p class="date">C++</p>
           <p class="former">GERP</p>
-          <p class="sectionText">Made a GREP like tool using data Structure knowledge</p>
+          <p class="sectionText">Made a GREP like tool using Data Structure knowledge</p>
         </div>
         <div class="item">
           <p class="date">C</p>
