--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Resume Page</title>
+  <a href="index.html" ><img id = backbutton src="images/backbutton.png" alt="Back Button"></a>
 </head>
 
 <body>
@@ -121,7 +122,7 @@
         <p class="date">Unity</p>
         <p class="former">5 More Minutes</p>
         <p class="sectionText">Designed and created a game in Unity
-        <br>Made the graphics design and the game design. </p>
+          <br>Made the graphics design and the game design. </p>
         <div class="item">
           <p class="date">C++</p>
           <p class="former">GERP</p>
