--- a/resume.html
+++ b/resume.html
@@ -136,7 +136,7 @@
         <div class="item">
           <p class="date">Java</p>
           <p class="former">PacMan</p>
-          <p class="sectionText">Wrote PacMan from scracth using AP Programming knowledge</p>
+          <p class="sectionText">Wrote PacMan from scratch using AP Programming knowledge</p>
         </div>
       </div>
     </div>
