Added medium page link.

--- a/resume.html
+++ b/resume.html
@@ -19,6 +19,7 @@
       <div class="right starting">
         <p>Ahmet Armanc KESER</p>
         <a href="https://www.linkedin.com/in/ahmet-armanc-keser-38352bb5" class="fa fa-linkedin"></a>
+        <a href="https://medium.com/@armanckeser" class="fa fa-medium"></a>
         <a href="https://github.com/armanckeser" class="fa fa-github"></a>
         <a href="mailto:armanckeser@hotmail.com?subject=ReachOut">e-mail</a>
         <p>(+1) 781-539-3001</p>
